fix: Fix issues with elements alignment

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -19,6 +19,8 @@
 }
 
 .current-section {
+  background: none;
+  color: #026e02;
   width: 40%;
   text-transform: uppercase;
   font-weight: bold;
@@ -105,6 +107,7 @@
 }
 
 .socials {
+  width: 100%;
   margin: 16px 10%;
   border-top: 1px solid #9f9f9f;
   padding: 8px 0;
@@ -207,6 +210,14 @@
   padding: 96px 16px;
 }
 
+.contact-wrapper {
+  width: 100%;
+}
+
+.form-container {
+  width: 100%;
+}
+
 .form-section {
   padding: 0 15px;
   position: relative;
@@ -260,6 +271,10 @@
   height: 55px;
 }
 
+.no-show {
+  display: none;
+}
+
 .form-submit {
   background: #ce3232;
   border-radius: 0;
@@ -289,7 +304,7 @@
 
 .footer-list,
 .footer-list-item {
-  margin: 4px;
+  padding: 4px;
   width: 100%;
 }
 
