--- a/src/css/screens/large-screen.css
+++ b/src/css/screens/large-screen.css
@@ -1,4 +1,4 @@
-.contact {
+.contact-wrapper {
   width: 50%;
 }
 
