--- a/src/css/screens/medium-screen.css
+++ b/src/css/screens/medium-screen.css
@@ -40,7 +40,7 @@
   transform: translateY(0%);
 }
 
-.contact {
+.contact-wrapper {
   width: 60%;
 }
 
